do not insert into message list if already in it